samples/_failures_safe/1761712458_f23512_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ffa89272.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_ffa89272.c:189:9: error: expected ‘:’ or ‘...’ at end of input
  189 |         case TOKEN_OPERATOR
      |         ^~~~
./samples/SAFE/__tmp_ffa89272.c:189:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ffa89272.c:189:9: error: expected declaration or statement at end of input
